--- a/index.html
+++ b/index.html
@@ -4,15 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VideoKern AI</title>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <style>
-        body { font-family: 'Segoe UI', sans-serif; background-color: #f0f2f5; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
-        .container { background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); width: 400px; text-align: center; }
+        body { font-family: 'Segoe UI', sans-serif; background-color: #f0f2f5; display: flex; justify-content: center; align-items: flex-start; min-height: 100vh; margin: 0; padding-top: 50px; }
+        .container { background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); width: 600px; max-width: 90%; text-align: center; margin-bottom: 50px; }
         h1 { color: #333; margin-bottom: 1.5rem; font-size: 1.5rem; }
-        input { width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ddd; border-radius: 6px; box-sizing: border-box; }
-        button { width: 100%; padding: 10px; background-color: #ff0000; color: white; border: none; border-radius: 6px; cursor: pointer; font-weight: bold; font-size: 1rem; }
+        input { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ddd; border-radius: 6px; box-sizing: border-box; font-size: 1rem; }
+        button { width: 100%; padding: 12px; background-color: #ff0000; color: white; border: none; border-radius: 6px; cursor: pointer; font-weight: bold; font-size: 1.1rem; transition: 0.2s; }
         button:hover { background-color: #cc0000; }
-        #resultaat { margin-top: 20px; text-align: left; white-space: pre-wrap; background: #f9f9f9; padding: 10px; border-radius: 6px; border: 1px solid #eee; display: none; font-size: 0.9rem; }
-        .loading { color: #666; font-style: italic; display: none; }
+        
+        /* Hier maken we de samenvatting mooi */
+        #resultaat { 
+            margin-top: 25px; 
+            text-align: left; 
+            background: #ffffff; 
+            padding: 20px; 
+            border-radius: 8px; 
+            border: 1px solid #eee; 
+            display: none; 
+            font-size: 1rem; 
+            line-height: 1.6; /* Meer ruimte tussen regels */
+            color: #2c3e50;
+        }
+
+        /* Opmaak voor de Markdown elementen */
+        #resultaat h1, #resultaat h2, #resultaat h3 { color: #d32f2f; margin-top: 15px; }
+        #resultaat strong { color: #000; font-weight: 700; }
+        #resultaat ul { padding-left: 20px; margin-bottom: 15px; }
+        #resultaat li { margin-bottom: 8px; }
+
+        .loading { color: #666; font-style: italic; display: none; margin-top: 15px; }
     </style>
 </head>
 <body>
@@ -23,7 +44,7 @@
     <input type="text" id="urlInput" placeholder="Plak hier je YouTube Link..." />
     <button onclick="vatSamen()">Vat Samen 🚀</button>
     
-    <p id="loading" class="loading">Even geduld, de AI kijkt de video...</p>
+    <p id="loading" class="loading">Even geduld, de AI is aan het typen... ☕</p>
     <div id="resultaat"></div>
 </div>
 
@@ -35,7 +56,7 @@
 
         // Reset
         resultaatDiv.style.display = 'none';
-        resultaatDiv.innerText = '';
+        resultaatDiv.innerHTML = ''; // Leegmaken
         loadingDiv.style.display = 'block';
 
         try {
@@ -50,17 +71,15 @@
             resultaatDiv.style.display = 'block';
 
             if (data.error) {
-                resultaatDiv.innerHTML = "❌ <b>Fout:</b> " + data.error;
-                resultaatDiv.style.color = "red";
+                resultaatDiv.innerHTML = `<div style="color:red; font-weight:bold;">❌ Fout: ${data.error}</div>`;
             } else {
-                resultaatDiv.innerText = data.resultaat;
-                resultaatDiv.style.color = "#333";
+                // HIER GEBEURT DE MAGIE: marked.parse() maakt er mooie HTML van
+                resultaatDiv.innerHTML = marked.parse(data.resultaat);
             }
         } catch (error) {
             loadingDiv.style.display = 'none';
             resultaatDiv.style.display = 'block';
-            resultaatDiv.innerHTML = "❌ <b>Verbindingsfout:</b> " + error.message;
-            resultaatDiv.style.color = "red";
+            resultaatDiv.innerHTML = `<div style="color:red;">❌ Verbindingsfout: ${error.message}</div>`;
         }
     }
 </script>
